--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     margin-top: 40px;
   }
   main, .output-container {
-    width: 80%;
+    width: 100%;
     max-width: 1000px;
     background-color: rgba(0, 255, 255, 0.5);
     padding: 10px;
@@ -64,10 +64,15 @@
       display: none;
     }
     .output-container {
+      width: 100%;
       position: absolute;
       border: none;
       top: 0;
       left: 0;
+    }
+    #outputFieldGrammatica,
+    #outputFieldLogica {
+      width: 100%;
     }
   }
  </style>
@@ -84,7 +89,8 @@
         <label>
             Inserisci qui di seguito la frase o le frasi <br>
             Normalizza gli articoli con apostrofo: ad es. l' => la/lo, un' => una/uno. <br>
-            Fai lo stesso con le preposizioni articolate: ad es. dell' => della/dello
+            Fai lo stesso con le preposizioni articolate: ad es. dell' => della/dello <br>
+            Raggruppa i verbi: ad es. avessero continuato => avessero_continuato
         </label>
         <textarea rows="5" placeholder="Testo" id="inputField"></textarea>
         <button type="button" onclick="analize()">Formatta</button>
