--- a/index.html
+++ b/index.html
@@ -64,15 +64,14 @@
       display: none;
     }
     .output-container {
-      width: 100%;
+      display: flex
+;
+    flex-direction: column;
+    align-items: flex-start;
       position: absolute;
       border: none;
       top: 0;
       left: 0;
-    }
-    #outputFieldGrammatica,
-    #outputFieldLogica {
-      width: 100%;
     }
   }
  </style>
