--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
       display: none;
     }
     .output-container {
-      display: flex
-;
+      display: flex;
     flex-direction: column;
     align-items: flex-start;
       position: absolute;
