--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             Inserisci qui di seguito la frase o le frasi <br>
             Normalizza gli articoli con apostrofo: ad es. l' => la/lo, un' => una/uno. <br>
             Fai lo stesso con le preposizioni articolate: ad es. dell' => della/dello <br>
-            Raggruppa i verbi: ad es. avessero continuato => avessero_continuato
+            Raggruppa con un trattino basso i verbi e gli aggettivi composti da più parole: ad es. avessero continuato => avessero_continuato, più bello => più_bello
         </label>
         <textarea rows="5" placeholder="Testo" id="inputField"></textarea>
         <button type="button" onclick="analize()">Formatta</button>
